sc-memory/sc-memory/scs/scsParser.cpp

#include "scsLexer.h"
#include "sc-memory/scs/scs_parser.hpp"

#include "sc-memory/sc_debug.hpp"

#define APPEND_ATTRS(__attrs, __edge) \
for (auto const & _a : __attrs) \
{ \
  ElementHandle const attrEdge = m_parser->ProcessConnector(_a.second ? "->" : "_->"); \
  m_parser->ProcessTriple(_a.first, attrEdge, __edge); \
}

#define PARSE_ERROR(line, pos, msg) \
  SC_THROW_EXCEPTION(utils::ExceptionParseError, \
                    "line " << line << ", " << pos << " " << msg);



// Generated from scs.g4 by ANTLR 4.7.1



#include "scsParser.h"


using namespace antlrcpp;
using namespace scs;
using namespace antlr4;

scsParser::scsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

scsParser::~scsParser() {
  delete _interpreter;
}

std::string scsParser::getGrammarFileName() const {
  return "scs.g4";
}

const std::vector<std::string>& scsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& scsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ContentContext ------------------------------------------------------------------

scsParser::ContentContext::ContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* scsParser::ContentContext::CONTENT_BODY() {
  return getToken(scsParser::CONTENT_BODY, 0);
}


size_t scsParser::ContentContext::getRuleIndex() const {
  return scsParser::RuleContent;
}


scsParser::ContentContext* scsParser::content() {
  ContentContext *_localctx = _tracker.createInstance<ContentContext>(_ctx, getState());
  enterRule(_localctx, 0, scsParser::RuleContent);
   _localctx->isVar = false; 
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == scsParser::T__0) {
      setState(44);
      match(scsParser::T__0);
       _localctx->isVar = true; 
    }
    setState(48);
    dynamic_cast<ContentContext *>(_localctx)->c = match(scsParser::CONTENT_BODY);

          std::string const v = _localctx->c->getText();
          SC_ASSERT(v.size() > 1, ());
          _localctx->handle = m_parser->ProcessContent(v.substr(1, v.size() - 2), _localctx->isVar);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContourContext ------------------------------------------------------------------

scsParser::ContourContext::ContourContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* scsParser::ContourContext::CONTOUR_BEGIN() {
  return getToken(scsParser::CONTOUR_BEGIN, 0);
}

tree::TerminalNode* scsParser::ContourContext::CONTOUR_END() {
  return getToken(scsParser::CONTOUR_END, 0);
}

std::vector<scsParser::Sentence_wrapContext *> scsParser::ContourContext::sentence_wrap() {
  return getRuleContexts<scsParser::Sentence_wrapContext>();
}

scsParser::Sentence_wrapContext* scsParser::ContourContext::sentence_wrap(size_t i) {
  return getRuleContext<scsParser::Sentence_wrapContext>(i);
}


size_t scsParser::ContourContext::getRuleIndex() const {
  return scsParser::RuleContour;
}


scsParser::ContourContext* scsParser::contour() {
  ContourContext *_localctx = _tracker.createInstance<ContourContext>(_ctx, getState());
  enterRule(_localctx, 2, scsParser::RuleContour);
   dynamic_cast<ContourContext *>(_localctx)->count =  1; 
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(scsParser::CONTOUR_BEGIN);

          m_parser->ProcessContourBegin();
        
    setState(53);

    if (!( _localctx->count > 0 )) throw FailedPredicateException(this, " $ctx->count > 0 ");

    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << scsParser::T__0)
      | (1ULL << scsParser::T__42)
      | (1ULL << scsParser::T__44)
      | (1ULL << scsParser::T__45)
      | (1ULL << scsParser::T__46)
      | (1ULL << scsParser::T__47)
      | (1ULL << scsParser::T__48)
      | (1ULL << scsParser::T__49)
      | (1ULL << scsParser::T__50)
      | (1ULL << scsParser::T__51)
      | (1ULL << scsParser::T__52)
      | (1ULL << scsParser::T__53)
      | (1ULL << scsParser::T__55)
      | (1ULL << scsParser::T__57))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (scsParser::ID_SYSTEM - 64))
      | (1ULL << (scsParser::ALIAS_SYMBOLS - 64))
      | (1ULL << (scsParser::CONTOUR_BEGIN - 64))
      | (1ULL << (scsParser::CONTENT_BODY - 64))
      | (1ULL << (scsParser::LINK - 64)))) != 0)) {
      setState(54);
      sentence_wrap();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    match(scsParser::CONTOUR_END);

          _localctx->count--;
          if (_localctx->count == 0)
          {
            _localctx->handle = m_parser->ProcessContourEnd();
          }
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConnectorContext ------------------------------------------------------------------

scsParser::ConnectorContext::ConnectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t scsParser::ConnectorContext::getRuleIndex() const {
  return scsParser::RuleConnector;
}


scsParser::ConnectorContext* scsParser::connector() {
  ConnectorContext *_localctx = _tracker.createInstance<ConnectorContext>(_ctx, getState());
  enterRule(_localctx, 4, scsParser::RuleConnector);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    dynamic_cast<ConnectorContext *>(_localctx)->c = _input->LT(1);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << scsParser::T__1)
      | (1ULL << scsParser::T__2)
      | (1ULL << scsParser::T__3)
      | (1ULL << scsParser::T__4)
      | (1ULL << scsParser::T__5)
      | (1ULL << scsParser::T__6)
      | (1ULL << scsParser::T__7)
      | (1ULL << scsParser::T__8)
      | (1ULL << scsParser::T__9)
      | (1ULL << scsParser::T__10)
      | (1ULL << scsParser::T__11)
      | (1ULL << scsParser::T__12)
      | (1ULL << scsParser::T__13)
      | (1ULL << scsParser::T__14)
      | (1ULL << scsParser::T__15)
      | (1ULL << scsParser::T__16)
      | (1ULL << scsParser::T__17)
      | (1ULL << scsParser::T__18)
      | (1ULL << scsParser::T__19)
      | (1ULL << scsParser::T__20)
      | (1ULL << scsParser::T__21)
      | (1ULL << scsParser::T__22)
      | (1ULL << scsParser::T__23)
      | (1ULL << scsParser::T__24)
      | (1ULL << scsParser::T__25)
      | (1ULL << scsParser::T__26)
      | (1ULL << scsParser::T__27)
      | (1ULL << scsParser::T__28)
      | (1ULL << scsParser::T__29)
      | (1ULL << scsParser::T__30)
      | (1ULL << scsParser::T__31)
      | (1ULL << scsParser::T__32)
      | (1ULL << scsParser::T__33)
      | (1ULL << scsParser::T__34)
      | (1ULL << scsParser::T__35)
      | (1ULL << scsParser::T__36)
      | (1ULL << scsParser::T__37)
      | (1ULL << scsParser::T__38)
      | (1ULL << scsParser::T__39)
      | (1ULL << scsParser::T__40))) != 0))) {
      dynamic_cast<ConnectorContext *>(_localctx)->c = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }

          _localctx->text = dynamic_cast<ConnectorContext *>(_localctx)->c->getText();
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SyntaxContext ------------------------------------------------------------------

scsParser::SyntaxContext::SyntaxContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* scsParser::SyntaxContext::EOF() {
  return getToken(scsParser::EOF, 0);
}

std::vector<scsParser::Sentence_wrapContext *> scsParser::SyntaxContext::sentence_wrap() {
  return getRuleContexts<scsParser::Sentence_wrapContext>();
}

scsParser::Sentence_wrapContext* scsParser::SyntaxContext::sentence_wrap(size_t i) {
  return getRuleContext<scsParser::Sentence_wrapContext>(i);
}


size_t scsParser::SyntaxContext::getRuleIndex() const {
  return scsParser::RuleSyntax;
}


scsParser::SyntaxContext* scsParser::syntax() {
  SyntaxContext *_localctx = _tracker.createInstance<SyntaxContext>(_ctx, getState());
  enterRule(_localctx, 6, scsParser::RuleSyntax);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << scsParser::T__0)
      | (1ULL << scsParser::T__42)
      | (1ULL << scsParser::T__44)
      | (1ULL << scsParser::T__45)
      | (1ULL << scsParser::T__46)
      | (1ULL << scsParser::T__47)
      | (1ULL << scsParser::T__48)
      | (1ULL << scsParser::T__49)
      | (1ULL << scsParser::T__50)
      | (1ULL << scsParser::T__51)
      | (1ULL << scsParser::T__52)
      | (1ULL << scsParser::T__53)
      | (1ULL << scsParser::T__55)
      | (1ULL << scsParser::T__57))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (scsParser::ID_SYSTEM - 64))
      | (1ULL << (scsParser::ALIAS_SYMBOLS - 64))
      | (1ULL << (scsParser::CONTOUR_BEGIN - 64))
      | (1ULL << (scsParser::CONTENT_BODY - 64))
      | (1ULL << (scsParser::LINK - 64)))) != 0)) {
      setState(66);
      sentence_wrap();
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(72);
    match(scsParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sentence_wrapContext ------------------------------------------------------------------

scsParser::Sentence_wrapContext::Sentence_wrapContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

scsParser::SentenceContext* scsParser::Sentence_wrapContext::sentence() {
  return getRuleContext<scsParser::SentenceContext>(0);
}


size_t scsParser::Sentence_wrapContext::getRuleIndex() const {
  return scsParser::RuleSentence_wrap;
}


scsParser::Sentence_wrapContext* scsParser::sentence_wrap() {
  Sentence_wrapContext *_localctx = _tracker.createInstance<Sentence_wrapContext>(_ctx, getState());
  enterRule(_localctx, 8, scsParser::RuleSentence_wrap);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    sentence();
    setState(75);
    match(scsParser::T__41);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SentenceContext ------------------------------------------------------------------

scsParser::SentenceContext::SentenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

scsParser::Sentence_lvl1Context* scsParser::SentenceContext::sentence_lvl1() {
  return getRuleContext<scsParser::Sentence_lvl1Context>(0);
}

scsParser::Sentence_assignContext* scsParser::SentenceContext::sentence_assign() {
  return getRuleContext<scsParser::Sentence_assignContext>(0);
}

scsParser::Sentence_lvl_commonContext* scsParser::SentenceContext::sentence_lvl_common() {
  return getRuleContext<scsParser::Sentence_lvl_commonContext>(0);
}


size_t scsParser::SentenceContext::getRuleIndex() const {
  return scsParser::RuleSentence;
}


scsParser::SentenceContext* scsParser::sentence() {
  SentenceContext *_localctx = _tracker.createInstance<SentenceContext>(_ctx, getState());
  enterRule(_localctx, 10, scsParser::RuleSentence);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      sentence_lvl1();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(78);
      sentence_assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(79);
      sentence_lvl_common();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AliasContext ------------------------------------------------------------------

scsParser::AliasContext::AliasContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* scsParser::AliasContext::ALIAS_SYMBOLS() {
  return getToken(scsParser::ALIAS_SYMBOLS, 0);
}


size_t scsParser::AliasContext::getRuleIndex() const {
  return scsParser::RuleAlias;
}


scsParser::AliasContext* scsParser::alias() {
  AliasContext *_localctx = _tracker.createInstance<AliasContext>(_ctx, getState());
  enterRule(_localctx, 12, scsParser::RuleAlias);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(scsParser::ALIAS_SYMBOLS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Idtf_systemContext ------------------------------------------------------------------

scsParser::Idtf_systemContext::Idtf_systemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* scsParser::Idtf_systemContext::ID_SYSTEM() {
  return getToken(scsParser::ID_SYSTEM, 0);
}


size_t scsParser::Idtf_systemContext::getRuleIndex() const {
  return scsParser::RuleIdtf_system;
}


scsParser::Idtf_systemContext* scsParser::idtf_system() {
  Idtf_systemContext *_localctx = _tracker.createInstance<Idtf_systemContext>(_ctx, getState());
  enterRule(_localctx, 14, scsParser::RuleIdtf_system);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case scsParser::ID_SYSTEM: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        dynamic_cast<Idtf_systemContext *>(_localctx)->id_systemToken = match(scsParser::ID_SYSTEM);
         _localctx->handle = m_parser->ProcessIdentifier(dynamic_cast<Idtf_systemContext *>(_localctx)->id_systemToken->getText()); 
        break;
      }

      case scsParser::T__42: {
        enterOuterAlt(_localctx, 2);
        setState(86);
        match(scsParser::T__42);
         _localctx->handle = m_parser->ProcessIdentifier("..."); 
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sentence_assignContext ------------------------------------------------------------------

scsParser::Sentence_assignContext::Sentence_assignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

scsParser::AliasContext* scsParser::Sentence_assignContext::alias() {
  return getRuleContext<scsParser::AliasContext>(0);
}

scsParser::Idtf_commonContext* scsParser::Sentence_assignContext::idtf_common() {
  return getRuleContext<scsParser::Idtf_commonContext>(0);
}


size_t scsParser::Sentence_assignContext::getRuleIndex() const {
  return scsParser::RuleSentence_assign;
}


scsParser::Sentence_assignContext* scsParser::sentence_assign() {
  Sentence_assignContext *_localctx = _tracker.createInstance<Sentence_assignContext>(_ctx, getState());
  enterRule(_localctx, 16, scsParser::RuleSentence_assign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    dynamic_cast<Sentence_assignContext *>(_localctx)->a = alias();
    setState(91);
    match(scsParser::T__43);
    setState(92);
    dynamic_cast<Sentence_assignContext *>(_localctx)->i = idtf_common();

          m_parser->ProcessAssign(_localctx->a->getText(), _localctx->i->handle);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Idtf_lvl1_preffixContext ------------------------------------------------------------------

scsParser::Idtf_lvl1_preffixContext::Idtf_lvl1_preffixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t scsParser::Idtf_lvl1_preffixContext::getRuleIndex() const {
  return scsParser::RuleIdtf_lvl1_preffix;
}


scsParser::Idtf_lvl1_preffixContext* scsParser::idtf_lvl1_preffix() {
  Idtf_lvl1_preffixContext *_localctx = _tracker.createInstance<Idtf_lvl1_preffixContext>(_ctx, getState());
  enterRule(_localctx, 18, scsParser::RuleIdtf_lvl1_preffix);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    dynamic_cast<Idtf_lvl1_preffixContext *>(_localctx)->type = _input->LT(1);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << scsParser::T__44)
      | (1ULL << scsParser::T__45)
      | (1ULL << scsParser::T__46)
      | (1ULL << scsParser::T__47)
      | (1ULL << scsParser::T__48)
      | (1ULL << scsParser::T__49)
      | (1ULL << scsParser::T__50)
      | (1ULL << scsParser::T__51)
      | (1ULL << scsParser::T__52)
      | (1ULL << scsParser::T__53))) != 0))) {
      dynamic_cast<Idtf_lvl1_preffixContext *>(_localctx)->type = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }

        _localctx->text = _localctx->type->getText();
      
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Idtf_lvl1_valueContext ------------------------------------------------------------------

scsParser::Idtf_lvl1_valueContext::Idtf_lvl1_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

scsParser::Idtf_lvl1_preffixContext* scsParser::Idtf_lvl1_valueContext::idtf_lvl1_preffix() {
  return getRuleContext<scsParser::Idtf_lvl1_preffixContext>(0);
}

tree::TerminalNode* scsParser::Idtf_lvl1_valueContext::ID_SYSTEM() {
  return getToken(scsParser::ID_SYSTEM, 0);
}


size_t scsParser::Idtf_lvl1_valueContext::getRuleIndex() const {
  return scsParser::RuleIdtf_lvl1_value;
}


scsParser::Idtf_lvl1_valueContext* scsParser::idtf_lvl1_value() {
  Idtf_lvl1_valueContext *_localctx = _tracker.createInstance<Idtf_lvl1_valueContext>(_ctx, getState());
  enterRule(_localctx, 20, scsParser::RuleIdtf_lvl1_value);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    dynamic_cast<Idtf_lvl1_valueContext *>(_localctx)->type = idtf_lvl1_preffix();
    setState(99);
    match(scsParser::T__54);
    setState(100);
    dynamic_cast<Idtf_lvl1_valueContext *>(_localctx)->i = match(scsParser::ID_SYSTEM);

          _localctx->handle = m_parser->ProcessIdentifierLevel1(_localctx->type->text, _localctx->i->getText());
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Idtf_lvl1Context ------------------------------------------------------------------

scsParser::Idtf_lvl1Context::Idtf_lvl1Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

scsParser::Idtf_lvl1_valueContext* scsParser::Idtf_lvl1Context::idtf_lvl1_value() {
  return getRuleContext<scsParser::Idtf_lvl1_valueContext>(0);
}


size_t scsParser::Idtf_lvl1Context::getRuleIndex() const {
  return scsParser::RuleIdtf_lvl1;
}


scsParser::Idtf_lvl1Context* scsParser::idtf_lvl1() {
  Idtf_lvl1Context *_localctx = _tracker.createInstance<Idtf_lvl1Context>(_ctx, getState());
  enterRule(_localctx, 22, scsParser::RuleIdtf_lvl1);
